--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,61 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group = 'ru.vsu.cs.tatarinov'
 version = '1.0-SNAPSHOT'
 
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'mysql:mysql-connector-java:8.0.33'
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
-test {
-    useJUnitPlatform()
+dependencies {
+
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
+
+    implementation 'org.json:json:20230227'
+
+    // База данных
+    implementation 'org.postgresql:postgresql:42.5.4'
+
+    // Тестирование
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+}
+
+war {
+    archiveFileName = 'socialnetwork.war'
+}
+
+// Для корректной работы в IntelliJ IDEA
+apply plugin: 'idea'
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+// Синхронизация зависимостей
+task syncDependencies(type: Sync) {
+    from configurations.compileClasspath
+    into 'lib'
 }
